add commentary to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   </head>
 
   <body>
+    <!-- header holds h1 tag and navagation links -->
     <header>
+      <!-- span allows the "seo" to have a diffrent color -->
       <h1>Hori<span class="seo">seo</span>n</h1>
       <nav>
+        <!-- nav holds links, the "#" allows the user to scroll to that section of the page when that link is clicked -->
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,8 +28,11 @@
         </ul>
       </nav>
     </header>
+    <!-- div holds the backround image -->
     <div class="hero"></div>
+    <!-- main element holds the article tag, relevant images, headings and paragraphs -->
     <main>
+      <!-- id classification allows the section to be automatically scrolled to, when the corresponding link in the "nav" element is clicked-->
       <article id="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -68,7 +74,8 @@
         </p>
       </article>
     </main>
-    <asside>
+    <!-- aside is the element floated to the right of the page and holds multiple sections -->
+    <aside>
       <section>
         <h3>Lead Generation</h3>
         <img
@@ -102,8 +109,8 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </section>
-    </asside>
-
+    </aside>
+    <!--footer holds the copyright and credit of the original devoloper and page owner  -->
     <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
